# immich-compress

./: .gitignore  Dockerfile  README.md  docker-compose.example.yml  docker-compose.published.example.yml  docker-compose.standalone.example.yml  pyproject.toml
.github/workflows/: docker.yml
app/: __init__.py  compression.py  config.py  db.py  immich.py  jobs.py  main.py  manual_import.py  tools.py
app/static/: styles.css
app/templates/: base.html  dashboard.html  job_detail.html  jobs.html  settings.html  videos.html
app/templates/partials/: jobs_table.html
resources/: hbed.py  upload_processed_to_immich.py
tests/: test_compression.py  test_db.py  test_immich.py  test_tools.py
